@@ -1,13 +1,13 @@
 ##################################################
 # Author     : Weilun Fong | wlf(at)zhishan-iot.tk
-# Date       : 2019-08-25
+# Date       : 2020-01-04
 # Description: Makefile for HML_FwLib_STC90, it will generate a hex format file finally
-# E-mail     : mcu(at)zhishan-iot.tk
+# E-mail     : mcu@zhishan-iot.tk
 # Make-tool  : GNU Make (http://www.gnu.org/software/make/manual/make.html)
 # Page       : https://hw.zhishan-iot.tk/page/hml/detail/fwlib_stc90.html
 # Tar-mcu    : STC90C53RC, belong to STC micro STC90 series
 # Tar-project: HML_FwLib_STC90
-# Version    : v0.2.5
+# Version    : v0.2.6
 ##################################################
 
 ########################################
@@ -27,7 +27,7 @@ export XARGS       := xargs
 ##### tool-chain
 AR                 := sdar
 CC                 := sdcc
-MAKE               ?= make
+MAKE               := make --no-print-directory
 PACKIHX            := packihx
 
 ########################################
@@ -61,16 +61,7 @@ CFLAGS_HML         := -c -I$(DIR_INC) -mmcs51 --opt-code-size --std-sdcc99 --cod
 CFLAGS             := -c -I$(DIR_INC) -mmcs51 --opt-code-size --std-sdcc99 -L$(DIR_OUTPUT) -lhml_stc90 --code-loc 0x0000 --code-size 0x1FFF --data-loc 0x00
 
 ########################################
-##### [2]VERSIION INFORMATION
-########################################
-##### version information##
-HML_FWLIB_NAME     := HML_FwLib_STC90
-HML_FWLIB_VERSION  := $(shell $(CAT) $(DIR_ROOT)/VERSION)
-# [note]: we unify version code from v0.1.0 because of the same makefile template
-MAK_VERSION        := v0.2.5
-
-########################################
-##### [3]BUILD WORKS
+##### [2]BUILD WORKS
 ########################################
 ##### all target
 all: $(TARGET).hex
@@ -121,18 +112,23 @@ distclean:
 .PHONY: help
 help:
     sinclude Makefile.help
+##### library
+.PHONY: library
+library: $(TARGET_FWLIB)
+	@echo ===================================================
+	@echo Make $(MAKECMDGOALS) done!
+	@echo project: $(HML_FWLIB_NAME) $(HML_FWLIB_VERSION)
+	@echo ---------------------------------------------------
+	@echo completed at `date "+%Y-%m-%d %H:%M:%S"`
+	@echo ===================================================
 ##### rebuild
 .PHONY: rebuild
 rebuild:
 	@$(EECHO) "\033[36m - Clean all middle or temporary files \033[0m"
 	$(CD) $(DIR_OUTPUT) && $(LS) | $(GREP) -v ".gitkeep" | $(XARGS) $(RM)
 	@$(EECHO) "\033[36m - Start to build... \033[0m"
-	@$(MAKE) -s -f Makefile -j$(JOBS) MAKECMDGOALS=$(MAKECMDGOALS)
+	@$(MAKE) -f Makefile -j$(JOBS) MAKECMDGOALS=$(MAKECMDGOALS)
 ##### version
 .PHONY: version
 version:
-	@$(ECHO) "HmlFwlibMakefile [$(MAK_VERSION)]"
-	@$(ECHO) "General purpose Makefile for HML firmware library."
-	@$(ECHO) "Copyright(c) 2018-2019 ZHISHAN-IoT, all rights reserved."
-	@$(ECHO) ""
-	@$(ECHO) "This Makefile is adapted for project $(HML_FWLIB_NAME) $(HML_FWLIB_VERSION) by Weilun Fong <wlf@zhishan-iot.tk>"
+    sinclude Makefile.version
