@@ -1,13 +1,13 @@
 ##################################################
 # Author     : Weilun Fong | wlf@zhishan-iot.tk
-# Date       : 2019-08-25
+# Date       : 2020-01-04
 # Description: help Makefile
 # E-mail     : mcu@zhishan-iot.tk
 # Make-tool  : GNU Make (http://www.gnu.org/software/make/manual/make.html)
 # Page       :
 # Tar-mcu    :
 # Tar-project: general purpose
-# Version    : v0.2.5
+# Version    : v0.2.6
 ##################################################
 
 ########################################
@@ -23,6 +23,7 @@ EECHO ?= $(ECHO) -e
 help:
 	@$(ECHO)  "Build:"
 	@$(ECHO)  "    all        - Build target(include HML library file and user code)"
+	@$(ECHO)  "    library    - Only build HML library file"
 	@$(EECHO) "    rebuild    - Rebuild target(include HML library file and user code). In this case, -j can't work and please pass \033[3mJOBS\033[0m variable via command line instead of it, such as \"make rebuild JOBS=8\""
 	@$(ECHO)  ""
 	@$(ECHO)  "Cleaning:"
